# BallisticsToolkit

./: .clangd  .editorconfig  .gitignore  .jsbeautifyrc  CMakeLists.txt  CONTRIBUTING.md  FORMATTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_native.sh  build_web.sh  format.sh  test_new_wind.cpp  test_wind_bias
.github/workflows/: deploy.yml
include/: atmosphere.h  ballistics.h  ballistics_calc.h  bullet.h  constants.h  conversions.h  match.h  match_simulator.h  nra_targets.h  scoring.h  simulator.h  target.h  trajectory.h  units.h  vector.h  web_ui.h  wind_generator.h
include/ballistics/: bullet.h  constants.h  simulator.h  trajectory.h
include/match/: match.h  match_target.h  nra_targets.h  simulator.h  steel_target.h  target.h
include/math/: conversions.h  perlin_noise.h  quaternion.h  random.h  simplex_noise.h  vector.h
include/physics/: atmosphere.h  constants.h  conversions.h  perlin_noise.h  vector.h  wind_generator.h
include/rendering/: dust_cloud.h  impact_detector.h  steel_target.h  wind_flag.h
libballistics/: CMakeLists.txt
libballistics/include/: atmosphere.h  constants.h  simulator.h
libballistics/src/: simulator.cpp
src/: atmosphere.cpp  ballistics_calc.cpp  bindings.cpp  main.cpp  match.cpp  match_simulator.cpp  nra_targets.cpp  scoring.cpp  simulator.cpp  target.cpp  trajectory.cpp  web_ui.cpp  wind_generator.cpp
src/ballistics/: CMakeLists.txt  simulator.cpp  trajectory.cpp
src/match/: match.cpp  nra_targets.cpp  simulator.cpp  steel_target.cpp  target.cpp  targets.cpp
src/physics/: atmosphere.cpp  wind_generator.cpp
src/rendering/: dust_cloud.cpp  impact_detector.cpp  steel_target.cpp  wind_flag.cpp
target_sim/: CMakeLists.txt
target_sim/web/: target_sim.js
tools/: CMakeLists.txt  build_and_run.sh  fit_aero_params.cpp
web/: _headers  about.html  ballistic-calc.html  ballistic-calc.js  ballistics-embind.js  ballistics_toolkit.js  common.css  common.js  contact.html  cookies.html  index.css  index.html  privacy.html  robots.txt  sitemap.xml  style.css  target-sim.html  target-sim.js  terms.html  test.html
web-ui/: CMakeLists.txt
web-ui/web/: target_sim.js
web/.well-known/: security.txt
web/ballistic-calc/: ballistic-calc.html  ballistic-calc.js
web/bc-comp/: bc-comp.html
web/fclass-sim/: ballistics-system.js  btk-wrappers.js  environment-system.js  fclass-sim.css  fclass-sim.html  fclass-sim.js  hud-system.js  mirage-effect.js  relay-manager.js  scope-system.js  scope.js  scorecard.js  simulator.js  target-system.js  wind-flags.js
web/fclass-sim/core/: RenderStats.js  btk.js  graphics-presets.js  match.js  settings-cookies.js  virtual-coords.js  wind.js
web/fclass-sim/rendering/: ballistics.js  environment.js  flags.js  mirage.js  scope.js  targets.js  wind-field-hud.js
web/fclass-sim/resources/: audio.js  manager.js  textures.js  time.js
web/fclass-sim/textures/cloth/: neo-manual.docx
web/fclass-sim/ui/: hud.js  scorecard.js
web/load-comp/: load-comp.html  load-comp.js
web/models/: prairie dog.glb  wild_boar.glb
web/perf-matrix/: perf-matrix.html  perf-matrix.js
web/steel-sim/: AudioManager.js  BallisticsTable.js  Berm.js  Boar.js  CompositionRenderer.js  DustCloud.js  HUD.js  ImpactDetector.js  ImpactMark.js  Landscape.js  ModelManager.js  PrairieDog.js  RangeSign.js  RenderStats.js  Scope.js  SettingsCookies.js  Shot.js  SpottingScope.js  SteelTarget.js  TargetRack.js  TextureManager.js  Time.js  WindFlag.js  config.js  steel-sim.css  steel-sim.html  steel-sim.js
web/target-sim/: target-sim.css  target-sim.html  target-sim.js
web/wind-game/: wind-game.js
web/wind-sim/: wind-sim.css  wind-sim.html  wind-sim.js
web/wind-sim/core/: btk.js  smoke-sim.js
